--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,11 +6,8 @@ server {
 server {
     listen 443 ssl;
 
-    ssl_certificate /etc/ssl/certs/domain.crt;
+    ssl_certificate /etc/ssl/certs/fullchain.crt;
     ssl_certificate_key /etc/ssl/private/domain.key;
-
-    # Опционально, если есть CA-цепочка:
-    ssl_certificate /etc/ssl/certs/ca.crt;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
