--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,7 +19,7 @@ server {
      location /api/ {
          root /var/www/laravel/public;
       index index.html index.php;
-      try_files $uri /index.php;
+      try_files $uri /index.php?$query_string;
      }
 
       location ~ \.php$ {
