--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,7 @@ server {
 
 server {
     listen 443 ssl;
+    client_max_body_size 50M;
 
     ssl_certificate /etc/ssl/certs/fullchain.crt;
     ssl_certificate_key /etc/ssl/private/domain.key;
