--- a/frontend/src/components/config.json
+++ b/frontend/src/components/config.json
@@ -1,4 +1,4 @@
 {
-  "backend": "https://exobloom.ru/api/",
-  "storage": "https://exobloom.ru/storage/"
+  "backend": "https://abeta.app/api/",
+  "storage": "https://abeta.app/storage/"
 }
