--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,12 +7,8 @@ server {
     listen 443 ssl;
     client_max_body_size 50M;
 
-    ssl_certificate /etc/ssl/certs/fullchain.crt;
-    ssl_certificate_key /etc/ssl/private/domain.key;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/private/privkey.pem;
 
     root /var/www/vue;
     index index.html;
