--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "google/apiclient": "^2.18",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "unisender/api-wrapper": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
